--- a/src/app/formation/formation.component.html
+++ b/src/app/formation/formation.component.html
@@ -1,80 +1,53 @@
 <section id="main">
-        <div class="menu-row">
                 <app-menu></app-menu>
-        </div>
-        <div class="row">
-                <div class="col-md-1"></div>
-                <div class="col">
-                        <div class="container">
-                                <section id="timeline">
-                                        <article>
-                                                <div class="inner">
-                                                        <span class="date">
-                                                                <span class="month">Jan</span>
-                                                                <span class="year">2014</span>
-                                                        </span>
-                                                        <h2>The Title</h2>
-                                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                                                Aenean quis rutrum nunc, eget dictum massa. Nam faucibus
-                                                                felis nec augue adipiscing, eget commodo libero mattis.
-                                                        </p>
-                                                </div>
-                                        </article>
-                                        <article>
-                                                <div class="inner">
-                                                        <span class="date">
-                                                                <span class="month">Jan</span>
-                                                                <span class="year">2014</span>
-                                                        </span>
-                                                        <h2>The Title</h2>
-                                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                                                Aenean quis rutrum nunc, eget dictum massa. Nam faucibus
-                                                                felis nec augue adipiscing, eget commodo libero mattis.
-                                                        </p>
-                                                </div>
-                                        </article>
-                                        <article>
-                                                <div class="inner">
-                                                        <span class="date">
-                                                                <span class="month">Jan</span>
-                                                                <span class="year">2014</span>
-                                                        </span>
-                                                        <h2>The Title</h2>
-                                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                                                Aenean quis rutrum nunc, eget dictum massa. Nam faucibus
-                                                                felis nec augue adipiscing, eget commodo libero mattis.
-                                                        </p>
-                                                </div>
-                                        </article>
-                                        <article>
-                                                <div class="inner">
-                                                        <span class="date">
-                                                                <span class="month">Jan</span>
-                                                                <span class="year">2014</span>
-                                                        </span>
-                                                        <h2>The Title</h2>
-                                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                                                Aenean quis rutrum nunc, eget dictum massa. Nam faucibus
-                                                                felis nec augue adipiscing, eget commodo libero mattis.
-                                                        </p>
-                                                </div>
-                                        </article>
-                                        <article>
-                                                <div class="inner">
-                                                        <span class="date">
-                                                                <span class="month">Jan</span>
-                                                                <span class="year">2014</span>
-                                                        </span>
-                                                        <h2>The Title</h2>
-                                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                                                Aenean quis rutrum nunc, eget dictum massa. Nam faucibus
-                                                                felis nec augue adipiscing, eget commodo libero mattis.
-                                                        </p>
-                                                </div>
-                                        </article>
-                                </section>
+            <section id="timeline">
+  
+                        <div class="tl-item">
+                          
+                          <div class="tl-bg" style="background-image: url('../../assets/images/utbm.jpg')"></div>
+                          
+                          <div class="tl-year">
+                            <p class="f2 heading--sanSerif">2021 - 2018</p>
+                          </div>
+                      
+                          <div class="tl-content">
+                            <h1>École d'ingénieur informatique</h1>
+                            <p>UTBM (Université de Technologie Belfort-Montbéliard) <br /> Informatique et Systèmes d'informations</p>
+                          </div>
+                      
                         </div>
-                </div>
-                <div class="col-md-3" id="perso"><img id="perso1" src="../../assets/images/perso-formation.png"></div>
-        </div>
-</section>
+                      
+                        <div class="tl-item">
+                          
+                          <div class="tl-bg" style="background-image:  url('../../assets/images/iut.jpg')"></div>
+                          
+                          <div class="tl-year">
+                            <p class="f2 heading--sanSerif">2018 - 2016</p>
+                          </div>
+                      
+                          <div class="tl-content">
+                            <h1 class="f3 text--accent ttu">DUT Mesures Physiques</h1>
+                            <p>IUT Paris Diderot, 13ème arondissement <br /> Option Informatique et Acoustique</p>
+                          </div>
+                      
+                        </div>
+                      
+                        <div class="tl-item">
+                          
+                          <div class="tl-bg" style="background-image: url('../../assets/images/lycee.jpg')"></div>
+                          
+                          <div class="tl-year">
+                            <p class="f2 heading--sanSerif">2016</p>
+                          </div>
+                      
+                          <div class="tl-content">
+                            <h1 class="f3 text--accent ttu">Baccalauréat scientifique</h1>
+                            <p>Lycée les Pierres Vives, Carrières sur Seine <br /> Spécialité Physique-chimie</p>
+                          </div>
+                      
+                        </div>
+                      
+                    
+                      </section>
+                      
+    </section>
