--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,27 +1,27 @@
 <!-- NAVBAR -->
 <ul class="nav">
     <li class="nav-item">
-        <a class="nav-link logo" routerLink="/cv"><img src="../../assets/images/logo-RP.png"
-                style="width: 45px; height: 45px;"></a>
+        <a class="nav-link logo" routerLink=""><img src="../../assets/images/logo-RP.png"
+                style="width: 50px; height: 50px;"></a>
     </li>
     <li class="nav-item">
-        <a class="nav-link prop" routerLink="/apropos" routerLinkActive="active-link-cyan">À propos</a>
+        <a class="nav-link prop" routerLink="/apropos" routerLinkActive="active-link">À propos</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link exp" routerLink="/experiences" routerLinkActive="active-link-darkblue">Expériences</a>
+        <a class="nav-link exp" routerLink="/experiences" routerLinkActive="active-link">Expériences</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link form" routerLink="/formations" routerLinkActive="active-link-lightblue">Formations</a>
+        <a class="nav-link form" routerLink="/formations" routerLinkActive="active-link">Formations</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link comp" routerLink="/competences" routerLinkActive="active-link-yellow">Compétences</a>
+        <a class="nav-link comp" routerLink="/competences" routerLinkActive="active-link">Compétences</a>
     </li>
 </ul>
 <!-- NAVBAR -->
 
 <!-- BURGER MENU -->
 <nav class="navbar">
-    <a class="navbar-brand" routerLink="/cv"><img src="../../assets/images/logo-RP.png"
+    <a class="navbar-brand" routerLink=""><img src="../../assets/images/logo-RP.png"
             style="width:45px; height: 45px;"></a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -31,19 +31,19 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item-burger">
-                <a class="nav-link-burger prop" routerLink="/apropos" routerLinkActive="active-link-cyan">À propos</a>
+                <a class="nav-link-burger prop" routerLink="/apropos" routerLinkActive="active-link">À propos</a>
             </li>
             <li class="nav-item-burger">
                 <a class="nav-link-burger exp" routerLink="/experiences"
-                    routerLinkActive="active-link-darkblue">Expériences</a>
+                    routerLinkActive="active-link">Expériences</a>
             </li>
             <li class="nav-item-burger">
                 <a class="nav-link-burger form" routerLink="/formations"
-                    routerLinkActive="active-link-lightblue">Formations</a>
+                    routerLinkActive="active-link">Formations</a>
             </li>
             <li class="nav-item-burger">
                 <a class="nav-link-burger comp" routerLink="/competences"
-                    routerLinkActive="active-link-yellow">Compétences</a>
+                    routerLinkActive="active-link">Compétences</a>
             </li>
 
         </ul>
