--- a/src/app/experience/experience.component.scss
+++ b/src/app/experience/experience.component.scss
@@ -1,117 +1,159 @@
-
-#centered-circle{
-   position:fixed;
-   /*background-image: url('../../assets/images/logo-RP.png');
+section#main{
+   background-image: url('../../assets/images/fond-turquoise.jpg');
+   height: 100%;
+   width:100%;
    background-position: center;
    background-repeat: no-repeat;
-   background-size: contain;*/
-   background-color: white;
-   border-radius: 50%;
-   top:50%;
-   left:50%;
-   width:70vh;
-   height:70vh;
-   margin-top:-35vh;
-   margin-left: -35vh;
-   border:1px solid black;
-   z-index: 5;
-}
-
-.text{
-   position: absolute;
-   font-family: comfortaa;
-   font-size: 3vw;
-   color: #FFF;
-   text-shadow: 2px 2px 2px black;
-}
-
-.item{
-   position: fixed;
-   background-position: center;
    background-size: cover;
-   width:50%;
-   height: 50vh;
-   transition: filter 0.5s, width 0.5s,height 0.5s;
+   z-index: 1;
+}
+
+body {
+   font-family: 'Source Sans Pro',Helvetica Neue,Helvetica,Arial,sans-serif; 
+   font-size: 16px;
+   line-height: 1.75;
+ }
+ 
+ #timeline {
+   display: flex;
+   background-color: #031625;
+ 
+   &:hover {
+     .tl-item {
+       width: 23.3333%;
+     }
+   }
+ }
+ 
+ .tl-item {
+   transform: translate3d(0, 0, 0);
+   position: relative;
+   width: 25%;
+   height: 100vh;
+   min-height: 600px;
+   color: #fff;
+   overflow: hidden;
+   transition: width 0.5s ease;
+   
+   &:before, &:after {
+     transform: translate3d(0, 0, 0);
+     content: '';
+     position: absolute;
+     left: 0; top: 0;
+     width: 100%; height: 100%;
+   }
+ 
+   &:after {
+     background: transparentize(#031625, 0.70);
+     opacity: 1;
+     transition: opacity 0.5s ease;
+   }
+ 
+   &:before {
+     background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 75%);
+     z-index: 1;
+     opacity: 0;
+     transform: translate3d(0, 0, 0) translateY(50%);
+     transition: opacity 0.5s ease, transform 0.5s ease;
+   }
+ 
+   &:hover {
+     width: 30% !important;
+     
+     &:after {
+       opacity: 0;
+     }
+ 
+     &:before {
+       opacity: 1;
+       transform: translate3d(0, 0, 0) translateY(0);
+       transition: opacity 1s ease, transform 1s ease 0.25s;
+     }
+     
+     .tl-content {
+       opacity: 1;
+       transform: translateY(0);
+       transition: all 0.75s ease 0.5s;
+     }
+ 
+     .tl-bg {
+       filter: grayscale(0);
+     }
+   }
+ }
+ 
+ .tl-content {
+   transform: translate3d(0, 0, 0) translateY(25px);
+   position: relative;
+   z-index: 1;
+   text-align: center;
+   margin: 0 1.618em;
+   top: 55%;
+   opacity: 0;
+   
+   h1 {
+     font-family: 'Pathway Gothic One',Helvetica Neue,Helvetica,Arial,sans-serif;
+     text-transform: uppercase;
+     color: #1779cf;
+     font-size: 1.44rem;
+     font-weight: normal;
+     text-decoration: none;
+   }
+ }
+ 
+ .tl-year {
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translateX(-50%) translateY(-50%);
+   z-index: 1;
+   
+   p {
+     font-family: comfortaa;
+     text-shadow: 1px 1px 2px black;
+     font-size: 1.728rem;
+     line-height: 0;
+   }
+ }
+ 
+ .tl-bg {
+   transform: translate3d(0, 0, 0);
+   position: absolute;
+   width: 100%; height: 100%;
+   top: 0; left: 0;
+   background-size: cover;
+   background-position: center center;
+   transition: filter 0.5s ease;
    filter: grayscale(100%);
+ }
+ 
+ @media screen and (max-width: 960px){
+   #timeline{
+       display:block;
 
-    &:hover{
-      filter:none;
-      width:50.3%;
-      height:50.5vh;
-      z-index:2;
-    }
-}
+       &:hover {
+         .tl-item {
+           height:23.33vh;
+           width:100%;
+         }
+       }
+   }
+   .tl-item{
+       width:100%;
+       height: 25vh;
+       min-height: 0px;
+       transition: height 0.5s ease;
 
-.c1{
-   top:0;
-   left:0;
-   background-image: url(https://placeimg.com/801/801/nature);
-   .text{
-      top:30%;
-      left: 23%;
-   }
-}
+       &:hover {
+           width: 100% !important;
+           height:30vh !important;
 
-.c2{
-   top:0;
-   right: 0;
-   background-image: url('../../assets/images/ge.jpg');
-   .text{
-      top:30%;
-      right: 17%;
+           .tl-year{
+               display:none;
+           }
+       } 
    }
-}
-
-.c3{
-   bottom:0;
-   left:0;
-   background-image: url(https://placeimg.com/803/803/nature);
-   .text{
-      bottom:30%;
-      left: 20%;
-   }
-}
-
-.c4{
-   bottom:0;
-   right:0;
-   background-image: url(https://placeimg.com/800/800/nature);
-   .text{
-      bottom:30%;
-      right: 15%;
-   }
-}
-
-@media screen and (max-width: 1025px){
-   #centered-circle{
-      width: 50vw;
-      height: 50vw;
-      margin-top: -25vw;
-      margin-left: -25vw;
-   }
-   .text{
-      font-size: 5vw;
-   }
-}
-
-@media screen and (max-width: 760px){
-   #centered-circle{
-      width: 60vw;
-      height: 60vw;
-      margin-top: -30vw;
-      margin-left: -30vw;
-   }
-   .text{
-      font-size: 5vw;
-   }
-   .c3{
-      .text{
-         left:18%;
-      }
-   }
-   .c4{
-      .text{
-         right:12%;
-      }
+   .tl-content{
+       top:5%;
    }
 }
