--- a/src/app/formation/formation.component.scss
+++ b/src/app/formation/formation.component.scss
@@ -1,178 +1,172 @@
 section#main{
-    background-image: url('../../assets/images/fond-bleu-ciel.jpg');
-    height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+  background-image: url('../../assets/images/fond-turquoise.jpg');
+  height: 100%;
+  width:100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: 1;
+}
+
+body {
+  font-family: 'Source Sans Pro',Helvetica Neue,Helvetica,Arial,sans-serif; 
+  font-size: 16px;
+  line-height: 1.75;
+}
+
+#timeline {
+  display: flex;
+  background-color: #031625;
+
+  &:hover {
+    .tl-item {
+      width: 30%;
+    }
+  }
+}
+
+.tl-item {
+  transform: translate3d(0, 0, 0);
+  position: relative;
+  width: 33.3333%;
+  height: 100vh;
+  min-height: 600px;
+  color: #fff;
+  overflow: hidden;
+  transition: width 0.5s ease;
+  
+  &:before, &:after {
+    transform: translate3d(0, 0, 0);
+    content: '';
+    position: absolute;
+    left: 0; top: 0;
+    width: 100%; height: 100%;
+  }
+
+  &:after {
+    background: transparentize(#031625, 0.70);
+    opacity: 1;
+    transition: opacity 0.5s ease;
+  }
+
+  &:before {
+    background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 75%);
     z-index: 1;
+    opacity: 0;
+    transform: translate3d(0, 0, 0) translateY(50%);
+    transition: opacity 0.5s ease, transform 0.5s ease;
+  }
+
+  &:hover {
+    width: 40% !important;
+    
+    &:after {
+      opacity: 0;
+    }
+
+    &:before {
+      opacity: 1;
+      transform: translate3d(0, 0, 0) translateY(0);
+      transition: opacity 1s ease, transform 1s ease 0.25s;
+    }
+    
+    .tl-content {
+      opacity: 1;
+      transform: translateY(0);
+      transition: all 0.75s ease 0.5s;
+    }
+
+    .tl-year{
+      top: 40%;
+    }
+
+    .tl-bg {
+      filter: grayscale(0);
+    }
+  }
 }
 
-#perso1{
-height:80vh;
-margin-top: 6vh;
-}
-
-.row{
-    display: flex;
-}
-
-.container{
-    padding:0;
-    margin:0;
-    margin-top:5vh;
-    height: 80vh;
-    overflow: hidden;
-    max-width: none;
- }
- 
- section#timeline {
-    height:100%;
-    width: 100%;
-    padding:10px;
-    margin-left: 17px;
-    padding-right: 34px;
-    position: relative;
-    overflow-y:scroll;
-    /*background-image: url('../../assets/images/perso-formation.png');
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;*/
-  }
- 
-  /*section#timeline:before {
-    content: '';
-    display: block;
-    position: absolute;
-    left: 50%;
-    top: 0;
-    margin: 0 0 0 -1px;
-    width: 2px;
-    height:100%;
-    background: rgba(0,0,0,0.2);
-  }*/
-  section#timeline article {
-    width: 100%;
-    margin: 0 0 20px 0;
-    position: relative;
-  }
-  section#timeline article:after {
-    content: '';
-    display: block;
-    clear: both;
-  }
-  section#timeline article div.inner {
-    width: 40%;
-    float: left;
-    margin: 5px 0 0 0;
-    border-radius: 6px;
-  }
-  section#timeline article div.inner span.date {
-    display: block;
-    width: 60px;
-    height: 60px;
-    padding: 5px 0;
-    position: absolute;
-    top: 0;
-    left: 50%;
-    margin: 0 0 0 -32px;
-    border-radius: 100%;
-    font-size: 12px;
-    font-weight: 900;
+.tl-content {
+  transform: translate3d(0, 0, 0) translateY(25px);
+  position: relative;
+  z-index: 1;
+  text-align: center;
+  margin: 0 1.618em;
+  top: 55%;
+  opacity: 0;
+  
+  h1 {
+    font-family: 'Pathway Gothic One',Helvetica Neue,Helvetica,Arial,sans-serif;
     text-transform: uppercase;
-    background: #25303B;
-    color: rgba(255,255,255,0.5);
-    border: 2px solid rgba(255,255,255,0.2);
-    box-shadow: 0 0 0 7px #25303B;
-  }
-  section#timeline article div.inner span.date span {
-    display: block;
-    text-align: center;
-  }
-  section#timeline article div.inner span.date span.day {
-    font-size: 10px;
-  }
-  section#timeline article div.inner span.date span.month {
-    font-size: 18px;
-  }
-  section#timeline article div.inner span.date span.year {
-    font-size: 10px;
-  }
-  section#timeline article div.inner h2 {
-    padding: 15px;
-    margin: 0;
-    color: #fff;
-    font-size: 20px;
-    text-transform: uppercase;
-    letter-spacing: -1px;
-    border-radius: 6px 6px 0 0;
-    position: relative;
-  }
-  section#timeline article div.inner h2:after {
-    content: '';
-    position: absolute;
-    top: 20px;
-    right: -5px;
-       width: 10px; 
-       height: 10px;
-    -webkit-transform: rotate(-45deg);
-  }
-  section#timeline article div.inner p {
-    padding: 15px;
-    margin: 0;
-    font-size: 14px;
-    background: #fff;
-    color: #656565;
-    border-radius: 0 0 6px 6px;
-  }
-  section#timeline article:nth-child(2n+2) div.inner {
-    float: right;
-  }
-  section#timeline article:nth-child(2n+2) div.inner h2:after {
-    left: -5px;
-  }
-  section#timeline article:nth-child(1) div.inner h2 {
-    background: #e74c3c;
-  }
-  section#timeline article:nth-child(1) div.inner h2:after {
-    background: #e74c3c;
-  }
-  section#timeline article:nth-child(2) div.inner h2 {
-    background: #2ecc71;
-  }
-  section#timeline article:nth-child(2) div.inner h2:after {
-    background: #2ecc71;
-  }
-  section#timeline article:nth-child(3) div.inner h2 {
-    background: #e67e22;
-  }
-  section#timeline article:nth-child(3) div.inner h2:after {
-    background: #e67e22;
-  }
-  section#timeline article:nth-child(4) div.inner h2 {
-    background: #1abc9c;
-  }
-  section#timeline article:nth-child(4) div.inner h2:after {
-    background: #1abc9c;
-  }
-  section#timeline article:nth-child(5) div.inner h2 {
-    background: #9b59b6;
-  }
-  section#timeline article:nth-child(5) div.inner h2:after {
-    background: #9b59b6;
+    color: cyan;
+    font-size: 1.35rem;
+    font-weight: normal;
+    text-decoration: none;
   }
 
+  p{
+    font-size: 1.10rem;
+  }
+}
 
-  @media screen and (max-width: 1025px){
-    .col{
-        background-image: url('../../assets/images/perso-formation.png');
-        background-position:  bottom;
-        background-size: contain;
-        background-repeat: no-repeat;
-    }
-    #perso{
-        display:none;
-    }
-    .col-md-1{
-        display:none;
-    }
+.tl-year {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width:40%;
+  transform: translateX(-50%) translateY(-50%);
+  z-index: 1;
+  padding-bottom: 10px;
+  border-bottom: 2px solid cyan;
+  text-align: center;
+  transition: all 0.5s ease 0.3s;
+  
+  p {
+    font-family: comfortaa;
+    text-shadow: 1px 1px 2px black;
+    font-size: 1.728rem;
+    line-height: 0;
+  }
+}
+
+.tl-bg {
+  transform: translate3d(0, 0, 0);
+  position: absolute;
+  width: 100%; height: 100%;
+  top: 0; left: 0;
+  background-size: cover;
+  background-position: center center;
+  transition: filter 0.5s ease;
+  filter: grayscale(100%);
+}
+
+@media screen and (max-width: 1025px){
+  #timeline{
+      display:block;
+
+      &:hover {
+        .tl-item {
+          height:30vh;
+          width:100%;
+        }
+      }
+  }
+  .tl-item{
+      width:100%;
+      height: 33.3333vh;
+      min-height: 0px;
+      transition: height 0.5s ease;
+
+      &:hover {
+          width: 100% !important;
+          height:40vh !important;
+
+          .tl-year{
+              top:20%;
+          }
+      } 
+  }
+  .tl-content{
+      top:40%;
+  }
 }
