--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,135 +1,152 @@
 
-section{
-    background-image: url('../../assets/images/background-remi.jpg');
-    height: 100%;
-    width: 100%;
+#centered-circle{
+    position:fixed;
+    background-image: url('../../assets/images/portrait_carre.jpg');
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
-    z-index: 1;
-}
-.container{
-    position: relative;
-    width:70%;
-    height: 21%;
-    border-radius: 10px;
-    background-color:rgba(0,0,0,0.55);
-    transition: all .3s ease-in-out;
-    margin: 2% 2% 3% 2%;   
-    padding:0; 
-    cursor: pointer;
-}
-.row{
-    height:80%;
-}
-.col{
-    margin-top:2%;
-    height: 100%;
-}
-.row-content{
-    height:100%;
-    padding:2% 2% 2% 2%;
-}
-
-.anim-logo{
-    width:33%;
-    height:100%;
-    background-size:contain;
+    background-size: contain;
+    background-color: white;
+    border-radius: 50%;
+    top:50%;
+    left:50%;
+    width:70vh;
+    height:70vh;
+    margin-top:-35vh;
+    margin-left: -35vh;
+    border:1px solid black;
+    z-index: 5;
+    filter: grayscale(100%);
+ }
+ #photo{
+    position:fixed;
+    background-image: url('../../assets/images/remi.png');
+    background-position: center;
     background-repeat: no-repeat;
-    padding:0;
-}
-.title{
-    width: 66%;
-    padding:0;
-}
+    background-size: contain;
+    top:50%;
+    left:50%;
+    height:90vh;
+    width:40vh;
+    margin-top: -45vh;
+    margin-left: -20vh;
+    z-index: 5;
+    filter:brightness(120%);
+ }
 
-.right{
-    float:right;
-}
-.left{
-    float:left;
-}
-
-h1{
-    font-family:  comfortaa;
-    color: #FFF;
+ .name{
+    width:100%;
+    position: absolute;
+    font-family: comfortaa;
+    font-size: 3.5vw;
+    color: black;
     text-align: center;
-    font-size:2vw;
-    margin-top:12px;
-    margin-bottom:12px;
+    text-shadow: 2px 2px 2px cyan;
+    position: absolute;
+    bottom: 10%;
+ }
+ 
+ #home{
+    width:100%;
+    height:100%;
+ }
+ 
+ .text{
+    position: absolute;
+    font-family: comfortaa;
+    font-size: 3vw;
+    color: #FFF;
     text-shadow: 2px 2px 2px black;
-}
-p{
-    color: #FFF;
-    text-align: center;
-    font-size: 1.4vw;
-    font-weight: 300;
-    margin:0;
-}
-
-
-.carousel-item{
-    transition: all 1.5s ease-in-out;
-}
-
-
-.logo-e{
-    background-image: url("../../assets/images/logo-experiences.png");
+ }
+ 
+ .item{
+    position: fixed;
     background-position: center;
-    float:left;
-}
-.logo-f{
-    background-image: url("../../assets/images/logo-formations.png");
-    background-position: center;
-    float:right;
-}
-.logo-c{
-    background-image: url("../../assets/images/logo-competences.png");
-    background-position: center;
-    float:left;
-}
-.logo-p{
-    background-image: url("../../assets/images/logo-a-propos.png");
-    background-position: center;
-    float:right;
-}
-
-@media screen and (max-width: 1025px){
-    section{
-        background-image: url('../../assets/images/background-portrait.jpg');
+    background-size: cover;
+    width:50%;
+    height: 50%;
+    transition: filter 0.8s, width 0.8s,height 0.8s;
+    filter: grayscale(100%);
+    cursor: pointer;
+ 
+     &:hover{
+       filter:none;
+       width:50.5%;
+       height:50.5%;
+       z-index:2;
+     }
+ }
+ 
+ .c1{
+    top:0;
+    left:0;
+    background-image: url(https://placeimg.com/801/801/nature);
+    .text{
+       top:30%;
+       left: 23%;
     }
-    h1{
-        font-size:5vw;
+ }
+ 
+ .c2{
+    top:0;
+    right: 0;
+    background-image: url('../../assets/images/ge.jpg');
+    .text{
+       top:30%;
+       right: 17%;
     }
-    p{
-        font-size:4vw;
+ }
+ 
+ .c3{
+    bottom:0;
+    left:0;
+    background-image: url(https://placeimg.com/803/803/nature);
+    .text{
+       bottom:30%;
+       left: 20%;
     }
-    .empty-col{
-        display:none;
+ }
+ 
+ .c4{
+    bottom:0;
+    right:0;
+    background-image: url(https://placeimg.com/800/800/nature);
+    .text{
+       bottom:30%;
+       right: 15%;
     }
-}
-
-.container:hover{
-    transform: scale(1.05);
-    background-color:rgba(0,0,0,0.65);
-}
-
-
-.experiences{
-    box-shadow: 5px -5px 10px #4669a5;
-}
-
-.formations{
-    margin-left:27%;
-    box-shadow: 5px -5px 10px rgb(193, 239, 255);
-}
-
-.competences{
-    box-shadow: 5px -5px 10px #FFDD83;
-}
-
-.apropos{
-    margin-left: 27%;
-    box-shadow: 5px -5px 10px #31BCCC;
-}
-
+ }
+ 
+ @media screen and (max-width: 1025px){
+    #centered-circle{
+       width: 50vw;
+       height: 50vw;
+       margin-top: -25vw;
+       margin-left: -25vw;
+    }
+    .text{
+       font-size: 5vw;
+    }
+ }
+ 
+ @media screen and (max-width: 760px){
+    #centered-circle{
+       width: 60vw;
+       height: 60vw;
+       margin-top: -30vw;
+       margin-left: -30vw;
+    }
+    .text{
+       font-size: 5vw;
+    }
+    .c3{
+       .text{
+          left:18%;
+       }
+    }
+    .c4{
+       .text{
+          right:12%;
+       }
+    }
+ }
+ 
