--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,66 +1,73 @@
 <section id="main">
-                        <app-menu></app-menu>
-                    <section id="timeline">
-          
-                                <div class="tl-item">
-                                  
-                                  <div class="tl-bg" style="background-image: url('../../assets/images/ge.jpg')"></div>
-                                  
-                                  <div class="tl-year">
-                                    <p class="f2 heading--sanSerif">2011</p>
-                                  </div>
-                              
-                                  <div class="tl-content">
-                                    <h1>Lorem ipsum dolor sit</h1>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.</p>
-                                  </div>
-                              
-                                </div>
-                              
-                                <div class="tl-item">
-                                  
-                                  <div class="tl-bg" style="background-image:  url(https://placeimg.com/803/803/nature)"></div>
-                                  
-                                  <div class="tl-year">
-                                    <p class="f2 heading--sanSerif">2013</p>
-                                  </div>
-                              
-                                  <div class="tl-content">
-                                    <h1 class="f3 text--accent ttu">Vestibulum laoreet lorem</h1>
-                                    <p>Suspendisse potenti. Sed sollicitudin eros lorem, eget accumsan risus dictum id. Maecenas dignissim ipsum vel mi rutrum egestas. Donec mauris nibh, facilisis ut hendrerit vel, fringilla sed felis. Morbi sed nisl et arcu.</p>
-                                  </div>
-                              
-                                </div>
-                              
-                                <div class="tl-item">
-                                  
-                                  <div class="tl-bg" style="background-image: url('../../assets/images/itq9.jpg')"></div>
-                                  
-                                  <div class="tl-year">
-                                    <p class="f2 heading--sanSerif">2014</p>
-                                  </div>
-                              
-                                  <div class="tl-content">
-                                    <h1 class="f3 text--accent ttu">Phasellus mauris elit</h1>
-                                    <p>Mauris cursus magna at libero lobortis tempor. Suspendisse potenti. Aliquam interdum vulputate neque sit amet varius. Maecenas ac pulvinar nisi. Fusce vitae nunc ultrices, tristique dolor at, porttitor dolor. Etiam id cursus arcu, in dapibus nibh. Pellentesque non porta leo. Nulla eros odio, egestas quis efficitur vel, pretium sed.</p>
-                                  </div>
-                              
-                                </div>
-                              
-                                <div class="tl-item">
-                                  
-                                  <div class="tl-bg" style="background-image: url('../../assets/images/ixblue.jpg')"></div>
-                                  
-                                  <div class="tl-year">
-                                    <p class="f2 heading--sanSerif">2016</p>
-                                  </div>
-                              
-                                  <div class="tl-content">
-                                    <h1 class="f3 text--accent ttu">Mauris vitae nunc elem</h1>
-                                    <p>Suspendisse ac mi at dolor sodales faucibus. Nunc sagittis ornare purus non euismod. Donec vestibulum efficitur tortor, eget efficitur enim facilisis consequat. Vivamus laoreet laoreet elit. Ut ut varius metus, bibendum imperdiet ex. Curabitur diam quam, blandit at risus nec, pulvinar porttitor lorem. Pellentesque dolor elit.</p>
-                                  </div>
-                              
-                                </div>
-                              </section>
-                              
-            </section>
+  <app-menu></app-menu>
+<section id="timeline">
+
+          <div class="tl-item">
+            
+            <div class="tl-bg" style="background-image: url('../../assets/images/ge.jpg')"></div>
+            
+            <div class="tl-year">
+              <p class="f2 heading--sanSerif">2021 - 2018</p>
+            </div>
+
+           
+            <div class="tl-logo l-ge" style="background-image: url('../../assets/images/logo-ge.png')"></div>
+        
+            <div class="tl-content">
+              <h1 class="f3 text--accent ttu">Apprenti informaticien General Electric</h1>
+              <p>(Septembre 2018 - Août 2021)<br />Belfort, France<br />GE Power, Monitoring & Diagnostic<br /><br />● Apporter des solutions pour l'automatisation des tâches<br />● Dévelopement de script pour la mise en forme de données<br />● Créer et tester des outils sur la Predix GE</p>
+            </div>
+        
+          </div>
+        
+          <div class="tl-item">
+            
+            <div class="tl-bg" style="background-image:  url('../../assets/images/test.jpg')"></div>
+            
+            <div class="tl-year">
+              <p class="f2 heading--sanSerif">???</p>
+            </div>
+        
+            <div class="tl-content">
+              <h1 class="f3 text--accent ttu">Expérience à l'étranger</h1>
+              <!--<p>(Septembre 2018 - Août 2021)<br />Equipe Monitoring & Diagnostic<br /><br />● Apporter des solutions pour l'automatisation des tâches<br />● Dévelopement de script pour la mise en forme de données<br />● Créer et tester des outils sur la Predix GE</p>-->
+            </div>
+        
+          </div>
+        
+          <div class="tl-item">
+            
+            <div class="tl-bg" style="background-image: url('../../assets/images/itq9.jpg')"></div>
+            
+            <div class="tl-year">
+              <p class="f2 heading--sanSerif">2019</p>
+            </div>
+            <div class="tl-logo l-itq9" style="background-image: url('../../assets/images/logo-itq9.png')"></div>
+            <div class="tl-content">
+              <h1 class="f3 text--accent ttu">Stagiaire développeur front-end itQ9</h1>
+              <p>(Mai 2019 - Juin 2019)<br />Dartington, Angleterre<br /><br />● Création de sites web pour particulier<br />● Analyser la demande et établir le cachier des charges<br />● Développement front-end sous Wordpress (Divi theme)</p>
+            </div>
+        
+          </div>
+
+          <div class="tl-item">
+            
+            <div class="tl-bg ixblue" style="background-image: url('../../assets/images/ixblue.jpg')"></div>
+            
+            <div class="tl-year">
+              <p class="f2 heading--sanSerif">2018</p>
+            </div>
+
+            <div class="tl-logo l-ixblue" style="background-image: url('../../assets/images/logo-ixblue.svg')"></div>
+        
+            <div class="tl-content">
+              <h1 class="f3 text--accent ttu">Stagiaire R&D optique iXblue</h1>
+              <p>(Avril 2018 - Août 2018)<br />Saint-germain-en-Laye, France<br />Equipe Recherche et Développement<br /><br />● Étude d'un composant du Gyroscope à fibre optique<br />● Fibrages de Mach-Zehnder<br />● Interprétation et présentation des résultats devant une équipe</p>
+            </div>
+        
+          </div>
+        
+      
+        </section>
+        
+</section>
