--- a/src/app/formation/formation.component.html
+++ b/src/app/formation/formation.component.html
@@ -4,22 +4,23 @@
   
                         <div class="tl-item">
                           
-                          <div class="tl-bg" style="background-image: url('../../assets/images/utbm.jpg')"></div>
+                          <div class="tl-bg utbm" style="background-image: url('../../assets/images/utbm.jpg')"></div>
                           
                           <div class="tl-year">
                             <p class="f2 heading--sanSerif">2021 - 2018</p>
                           </div>
+                    
                       
                           <div class="tl-content">
                             <h1>École d'ingénieur informatique</h1>
-                            <p>UTBM (Université de Technologie Belfort-Montbéliard) <br /> Informatique et Systèmes d'informations</p>
+                            <p><br />UTBM (Université de Technologie Belfort-Montbéliard) <br /> Informatique et Systèmes d'informations</p>
                           </div>
                       
                         </div>
                       
                         <div class="tl-item">
                           
-                          <div class="tl-bg" style="background-image:  url('../../assets/images/iut.jpg')"></div>
+                          <div class="tl-bg iut" style="background-image:  url('../../assets/images/iut.jpg')"></div>
                           
                           <div class="tl-year">
                             <p class="f2 heading--sanSerif">2018 - 2016</p>
@@ -27,14 +28,14 @@
                       
                           <div class="tl-content">
                             <h1 class="f3 text--accent ttu">DUT Mesures Physiques</h1>
-                            <p>IUT Paris Diderot, 13ème arondissement <br /> Option Informatique et Acoustique</p>
+                            <p><br />IUT Paris Diderot, 13ème arondissement <br /> Option Informatique et Acoustique</p>
                           </div>
                       
                         </div>
                       
                         <div class="tl-item">
                           
-                          <div class="tl-bg" style="background-image: url('../../assets/images/lycee.jpg')"></div>
+                          <div class="tl-bg lycee" style="background-image: url('../../assets/images/lycee.jpg')"></div>
                           
                           <div class="tl-year">
                             <p class="f2 heading--sanSerif">2016</p>
@@ -42,7 +43,7 @@
                       
                           <div class="tl-content">
                             <h1 class="f3 text--accent ttu">Baccalauréat scientifique</h1>
-                            <p>Lycée les Pierres Vives, Carrières sur Seine <br /> Spécialité Physique-chimie</p>
+                            <p><br />Lycée les Pierres Vives, Carrières sur Seine <br /> Spécialité Physique-chimie</p>
                           </div>
                       
                         </div>
