--- a/src/app/propos/propos.component.scss
+++ b/src/app/propos/propos.component.scss
@@ -1,5 +1,5 @@
 section#main{
-    background-image: url('../../assets/images/fond-turquoise.jpg');
+    //background-image: url('../../assets/images/fond-turquoise.jpg');
     height: 100%;
     width:100%;
     background-position: center;
