--- a/src/app/experience/experience.component.scss
+++ b/src/app/experience/experience.component.scss
@@ -1,159 +1,222 @@
-section#main{
-   background-image: url('../../assets/images/fond-turquoise.jpg');
-   height: 100%;
-   width:100%;
-   background-position: center;
-   background-repeat: no-repeat;
-   background-size: cover;
-   z-index: 1;
-}
 
 body {
-   font-family: 'Source Sans Pro',Helvetica Neue,Helvetica,Arial,sans-serif; 
-   font-size: 16px;
-   line-height: 1.75;
- }
- 
- #timeline {
-   display: flex;
-   background-color: #031625;
- 
-   &:hover {
-     .tl-item {
-       width: 23.3333%;
-     }
-   }
- }
- 
- .tl-item {
-   transform: translate3d(0, 0, 0);
-   position: relative;
-   width: 25%;
-   height: 100vh;
-   min-height: 600px;
-   color: #fff;
-   overflow: hidden;
-   transition: width 0.5s ease;
-   
-   &:before, &:after {
-     transform: translate3d(0, 0, 0);
-     content: '';
-     position: absolute;
-     left: 0; top: 0;
-     width: 100%; height: 100%;
-   }
- 
-   &:after {
-     background: transparentize(#031625, 0.70);
-     opacity: 1;
-     transition: opacity 0.5s ease;
-   }
- 
-   &:before {
-     background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 75%);
-     z-index: 1;
-     opacity: 0;
-     transform: translate3d(0, 0, 0) translateY(50%);
-     transition: opacity 0.5s ease, transform 0.5s ease;
-   }
- 
-   &:hover {
-     width: 30% !important;
-     
-     &:after {
-       opacity: 0;
-     }
- 
-     &:before {
-       opacity: 1;
-       transform: translate3d(0, 0, 0) translateY(0);
-       transition: opacity 1s ease, transform 1s ease 0.25s;
-     }
-     
-     .tl-content {
-       opacity: 1;
-       transform: translateY(0);
-       transition: all 0.75s ease 0.5s;
-     }
- 
-     .tl-bg {
-       filter: grayscale(0);
-     }
-   }
- }
- 
- .tl-content {
-   transform: translate3d(0, 0, 0) translateY(25px);
-   position: relative;
-   z-index: 1;
-   text-align: center;
-   margin: 0 1.618em;
-   top: 55%;
-   opacity: 0;
-   
-   h1 {
-     font-family: 'Pathway Gothic One',Helvetica Neue,Helvetica,Arial,sans-serif;
-     text-transform: uppercase;
-     color: #1779cf;
-     font-size: 1.44rem;
-     font-weight: normal;
-     text-decoration: none;
-   }
- }
- 
- .tl-year {
-   position: absolute;
-   top: 50%;
-   left: 50%;
-   transform: translateX(-50%) translateY(-50%);
-   z-index: 1;
-   
-   p {
-     font-family: comfortaa;
-     text-shadow: 1px 1px 2px black;
-     font-size: 1.728rem;
-     line-height: 0;
-   }
- }
- 
- .tl-bg {
-   transform: translate3d(0, 0, 0);
-   position: absolute;
-   width: 100%; height: 100%;
-   top: 0; left: 0;
-   background-size: cover;
-   background-position: center center;
-   transition: filter 0.5s ease;
-   filter: grayscale(100%);
- }
- 
- @media screen and (max-width: 960px){
-   #timeline{
-       display:block;
-
-       &:hover {
-         .tl-item {
-           height:23.33vh;
-           width:100%;
-         }
-       }
-   }
-   .tl-item{
-       width:100%;
-       height: 25vh;
-       min-height: 0px;
-       transition: height 0.5s ease;
-
-       &:hover {
-           width: 100% !important;
-           height:30vh !important;
-
-           .tl-year{
-               display:none;
-           }
-       } 
-   }
-   .tl-content{
-       top:5%;
-   }
+  font-family: 'Source Sans Pro',Helvetica Neue,Helvetica,Arial,sans-serif; 
+  font-size: 16px;
+  line-height: 1.75;
 }
+
+#timeline {
+  display: flex;
+  background-color: #031625;
+
+  &:hover {
+    .tl-item {
+      width: 23.3333%;
+    }
+  }
+}
+
+.tl-item {
+  transform: translate3d(0, 0, 0);
+  position: relative;
+  width: 25%;
+  height: 100vh;
+  min-height: 600px;
+  color: #fff;
+  overflow: hidden;
+  transition: width 0.5s ease;
+  
+  &:before, &:after {
+    transform: translate3d(0, 0, 0);
+    content: '';
+    position: absolute;
+    left: 0; top: 0;
+    width: 100%; height: 100%;
+  }
+
+  &:after {
+    background: transparentize(#031625, 0.70);
+    opacity: 1;
+    transition: opacity 0.5s ease;
+  }
+
+  &:before {
+    background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 100%);
+    z-index: 1;
+    opacity: 0;
+    transform: translate3d(0, 0, 0) translateY(50%);
+    transition: opacity 0.5s ease, transform 0.5s ease;
+  }
+
+  &:hover {
+    width: 30% !important;
+    .tl-logo{
+      visibility: hidden;
+      opacity: 0;
+    }
+    
+    &:after {
+      opacity: 0;
+    }
+
+    &:before {
+      opacity: 1;
+      transform: translate3d(0, 0, 0) translateY(0);
+      transition: opacity 1s ease, transform 1s ease 0.25s;
+    }
+    
+    .tl-content {
+      opacity: 1;
+      transform: translateY(0);
+      transition: all 0.75s ease 0.5s;
+    }
+
+    .tl-year{
+      top: 30%;
+    }
+
+    .tl-bg {
+      filter: grayscale(0);
+    }
+  }
+}
+
+.tl-content {
+  transform: translate3d(0, 0, 0) translateY(25px);
+  position: relative;
+  z-index: 1;
+  text-align: center;
+  margin: 0 1.618em;
+  top: 40%;
+  opacity: 0;
+  
+  h1 {
+    //font-family: 'Pathway Gothic One',Helvetica Neue,Helvetica,Arial,sans-serif;
+    text-transform: uppercase;
+    color: cyan;
+    font-size: 1.35rem;
+    font-weight: normal;
+    text-decoration: none;
+  }
+  p{
+    font-size: 1.20rem;
+  }
+  li{
+    list-style-type: none;
+  }
+}
+
+.tl-year {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  z-index: 1;
+  padding-bottom: 10px;
+  border-bottom: 2px solid cyan;
+  text-align: center;
+  transition: all 0.5s ease 0.3s;
+
+  p {
+    font-family: comfortaa;
+    text-shadow: 1px 1px 2px black;
+    font-size: 1.728rem;
+    line-height: 0;
+  }
+}
+
+.tl-logo {
+  visibility: visible;
+  opacity: 1;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  position: absolute;
+  left: 50%;
+  width: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  z-index: 1;
+  transition: all 0.5s ease;
+}
+
+.tl-bg {
+  transform: translate3d(0, 0, 0);
+  position: absolute;
+  width: 100%; height: 100%;
+  top: 0; left: 0;
+  background-size: cover;
+  background-position: center center;
+  transition: filter 0.5s ease;
+  filter: grayscale(70%);
+}
+
+.ixblue{
+  background-position: left;
+}
+.l-ixblue{
+  top:69%;
+  height: 12%;
+}
+.l-ge{
+  top:70%;
+  height: 15%;
+}
+.l-itq9{
+  top:70%;
+  height:12%;
+}
+
+@media screen and (max-width: 1025px){
+  #timeline{
+      display:block;
+
+      &:hover {
+        .tl-item {
+          height:30vh;
+          width:100%;
+        }
+      }
+  }
+  .tl-item{
+      width:100%;
+      height: 33.3333vh;
+      min-height: 0px;
+      transition: height 0.5s ease;
+
+      &:hover {
+          width: 100% !important;
+          height:65vh !important;
+
+          .tl-year{
+              top:20%;
+          }
+      } 
+  }
+  .tl-content{
+      top:40%;
+      margin: 0 1em;
+
+      h1{
+        font-size: 1.8rem;
+      }
+      p{
+        font-size: 1.4rem;
+      }
+  }
+}
+
+@media screen and (max-width: 770px){
+  .tl-content{
+    top:30%;
+    margin: 0 1em;
+
+    h1{
+      font-size: 1.20rem;
+    }
+    p{
+      font-size: 1rem;
+    }
+  }
+}
+  
