--- a/src/app/formation/formation.component.scss
+++ b/src/app/formation/formation.component.scss
@@ -1,12 +1,4 @@
-section#main{
-  background-image: url('../../assets/images/fond-turquoise.jpg');
-  height: 100%;
-  width:100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  z-index: 1;
-}
+
 
 body {
   font-family: 'Source Sans Pro',Helvetica Neue,Helvetica,Arial,sans-serif; 
@@ -50,7 +42,7 @@ body {
   }
 
   &:before {
-    background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 75%);
+    background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 100%);
     z-index: 1;
     opacity: 0;
     transform: translate3d(0, 0, 0) translateY(50%);
@@ -99,13 +91,13 @@ body {
     font-family: 'Pathway Gothic One',Helvetica Neue,Helvetica,Arial,sans-serif;
     text-transform: uppercase;
     color: cyan;
-    font-size: 1.35rem;
+    font-size: 1.45rem;
     font-weight: normal;
     text-decoration: none;
   }
 
   p{
-    font-size: 1.10rem;
+    font-size: 1.20rem;
   }
 }
 
@@ -137,7 +129,15 @@ body {
   background-size: cover;
   background-position: center center;
   transition: filter 0.5s ease;
-  filter: grayscale(100%);
+  filter: grayscale(70%);
+}
+
+.utbm{
+  background-position: left;
+}
+
+.lycee{
+  background-position: left;
 }
 
 @media screen and (max-width: 1025px){
@@ -159,7 +159,7 @@ body {
 
       &:hover {
           width: 100% !important;
-          height:45vh !important;
+          height:50vh !important;
 
           .tl-year{
               top:20%;
