--- a/src/app/experience/experience.component.scss
+++ b/src/app/experience/experience.component.scss
@@ -134,6 +134,7 @@ body {
   background-repeat: no-repeat;
   position: absolute;
   left: 50%;
+  top:70%;
   width: 50%;
   transform: translateX(-50%) translateY(-50%);
   z-index: 1;
@@ -155,15 +156,12 @@ body {
   background-position: left;
 }
 .l-ixblue{
-  top:69%;
   height: 12%;
 }
 .l-ge{
-  top:70%;
   height: 15%;
 }
 .l-itq9{
-  top:70%;
   height:12%;
 }
 
@@ -194,7 +192,7 @@ body {
       } 
   }
   .tl-content{
-      top:40%;
+      top:30%;
       margin: 0 1em;
 
       h1{
@@ -203,6 +201,16 @@ body {
       p{
         font-size: 1.4rem;
       }
+  }
+  .tl-year{
+    top:40%;
+  }
+  .tl-logo{
+    top:70%;
+    height:20%;
+  }
+  .l-ge{
+    height:25%;
   }
 }
 
