update formation exp

--- a/src/app/experience/experience.component.scss
+++ b/src/app/experience/experience.component.scss
@@ -126,6 +126,9 @@ body {
   }
 }
 
+.double{
+  width:65%;
+}
 .tl-logo {
   visibility: visible;
   opacity: 1;
@@ -201,6 +204,9 @@ body {
       p{
         font-size: 1.4rem;
       }
+  }
+  .double{
+    width:50%;
   }
   .tl-year{
     top:40%;
