--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -6,7 +6,7 @@
             
             <div class="tl-bg" style="background-image: url('../../assets/images/ge.jpg')"></div>
             
-            <div class="tl-year">
+            <div class="tl-year double">
               <p class="f2 heading--sanSerif">2021 - 2018</p>
             </div>
 
