--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -15,6 +15,7 @@
     margin-left: -35vh;
     border:1px solid black;
     z-index: 5;
+    box-shadow: 0 0 30px 10px;
     //filter: grayscale(100%);
  }
  #photo{
