--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -15,7 +15,7 @@
         
             <div class="tl-content">
               <h1 class="f3 text--accent ttu">Apprenti informaticien General Electric</h1>
-              <p>(Septembre 2018 - Août 2021)<br />Belfort, France<br />GE Power, Monitoring & Diagnostic<br /><br />● Apporter des solutions pour l'automatisation des tâches<br />● Dévelopement de script pour la mise en forme de données<br />● Créer et tester des outils sur la Predix GE</p>
+              <p>(Septembre 2018 - Août 2021)<br />Belfort, France<br />GE Power, Monitoring & Diagnostic<br /><br />◦ Développement d'application sur la Predix GE<br />◦ Apporter des solutions pour l'automatisation des tâches<br />◦ Dévelopement de script pour la mise en forme de données</p>
             </div>
         
           </div>
@@ -45,7 +45,7 @@
             <div class="tl-logo l-itq9" style="background-image: url('../../assets/images/logo-itq9.png')"></div>
             <div class="tl-content">
               <h1 class="f3 text--accent ttu">Stagiaire développeur front-end itQ9</h1>
-              <p>(Mai 2019 - Juin 2019)<br />Dartington, Angleterre<br /><br />● Création de sites web pour particulier<br />● Analyser la demande et établir le cachier des charges<br />● Développement front-end sous Wordpress (Divi theme)</p>
+              <p>(Mai 2019 - Juin 2019)<br />Dartington, Angleterre<br /><br />◦ Création de sites web pour particulier<br />◦ Analyser la demande et établir le cachier des charges<br />◦ Développement front-end sous Wordpress (Divi theme)</p>
             </div>
         
           </div>
@@ -62,7 +62,7 @@
         
             <div class="tl-content">
               <h1 class="f3 text--accent ttu">Stagiaire R&D optique iXblue</h1>
-              <p>(Avril 2018 - Août 2018)<br />Saint-germain-en-Laye, France<br />Equipe Recherche et Développement<br /><br />● Étude d'un composant du Gyroscope à fibre optique<br />● Fibrages de Mach-Zehnder<br />● Interprétation et présentation des résultats devant une équipe</p>
+              <p>(Avril 2018 - Août 2018)<br />Saint-germain-en-Laye, France<br />Equipe Recherche et Développement<br /><br />◦ Étude d'un composant du Gyroscope à fibre optique<br />◦ Fibrages de Mach-Zehnder<br />◦ Interprétation et présentation des résultats devant une équipe</p>
             </div>
         
           </div>
