--- a/src/app/propos/propos.component.html
+++ b/src/app/propos/propos.component.html
@@ -1,5 +1,22 @@
 <section id="main">
   <app-menu></app-menu>
-  <div id="arc-fixed"></div>
-
+  <div class="row principal">
+    <div class="col-md-4 background"></div>
+    <div class="col-md-8">
+      <div class="row scrollable">
+        <div class="scroll-section">
+          <div class="container">
+            <div id="presentation">erz <br />ezerz<br /> erez <br />rzer <br />zer <br />ezz <br />erze <br />rze <br />ez rze </div>
+            <div id="contact">rer <br />zrz <br />eza <br />zezr <br />ze rr <br />zer zer <br />zeez <br />rze r</div>
+            <div id="social">ez<br /> rr<br /> ezz zer<br /> rez<br /> zer re <br />zre <br />ezer z</div>
+          </div>
+        </div>
+      </div>
+      <div class="row projects">
+        <div class="col p1"></div>
+        <div class="col p2"></div>
+        <div class="col p3"></div>
+      </div>
+    </div>
+  </div>
 </section>
