--- a/src/app/propos/propos.component.scss
+++ b/src/app/propos/propos.component.scss
@@ -1,15 +1,60 @@
 #main{
   width:100%;
-  height:100%;
+  height: 100%;
+}
+.principal{
+  height: 100%;
 }
 
-#arc-fixed{
-  position: fixed;
+.background{
+  box-shadow: 0px 0px 30px 10px;
+  background-image: url('../../assets/images/wood-background.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: 2;
+}
+
+.scrollable{
   background-color: black;
-  border-radius: 50%;
-  width: 300%;
-  height: 900%;
-  margin-top: -450%;
-  margin-left: -72%;
+  height:60%;
+}
+
+.scroll-section{
+  margin-top: 90px;
+  margin-left: 8%;
+  height: 70%;
+  width: 80%;
   overflow: hidden;
+}
+
+.container{
+  height: 100%;
+  margin-left: 17px;
+  background-color: steelblue;
+  text-align: center;
+  overflow-y: scroll;
+  //font-size: 80px;
+}
+
+.projects{
+  height: 40%;
+  &:hover{
+    .col{
+      width:0%;
+    }
+  }
+}
+
+
+.p1{
+  background-color: red;
+}
+
+.p2{
+  background-color: orange;
+}
+
+.p3{
+  background-color: yellow;
 }
